[gd_scene load_steps=6 format=3 uid="uid://cyob4bvq34o1d"]

[ext_resource type="Texture2D" uid="uid://btrevxwhwbtfs" path="res://assets/farming_tools/GardenSheers.png" id="1_136eo"]
[ext_resource type="Script" uid="uid://phrmcrewi78b" path="res://scenes/tools/scissors.gd" id="1_i6u0j"]
[ext_resource type="PackedScene" uid="uid://dvg2oogt28upn" path="res://scenes/detect_interactable_area.tscn" id="4_ubv7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obcea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubv7k"]

[node name="Scissors" type="RigidBody2D"]
collision_mask = 96
input_pickable = true
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_i6u0j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.45035, 1.45035)
shape = SubResource("RectangleShape2D_obcea")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_136eo")

[node name="DetectInteractableArea" parent="." instance=ExtResource("4_ubv7k")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectInteractableArea"]
scale = Vector2(1.27434, 1.27434)
shape = SubResource("RectangleShape2D_ubv7k")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]

[editable path="DetectInteractableArea"]
